@@ -1,6 +1,10 @@
 LIST OF CHANGES
 ---------------
 
+ - Chained execution of RNA-SeQC to the vtfp/viv alignment cmd for RNA-Seq libraries only:
+     entries for qc check rna_seqc removed from central function and parallelisation.
+     code that created rna_seqc-specific directories has been removed as this is
+     now handled by the check itself using qc_out arg.
  - pipeline scripts - redirect stderr output to the log to capture output from all
    NPG and CPAN modules in one place
 
